add main adaptive

--- a/src/main.twig
+++ b/src/main.twig
@@ -33,33 +33,38 @@
         <h3 class="mission__subtitle">О&nbsp;компании</h3>
         <h2 class="misson__title title">Наша миссия</h2>
       </div>
-      <ul class="mission__list">
-      {% set list = [
-        {
-          title: 'Цель',
-          desc: 'Создание закрытой экосистемы (комплекса взаимоотношений между заказчиками и&nbsp;исполнителями в&nbsp;защищенной сети обмена информацией) поддержки предприятий ОПК.',
-        },
-        {
-          title: 'Задача',
-          desc: 'Формирование комплексного подхода к&nbsp;анализу, мониторингу и&nbsp;обеспечению информационной и&nbsp;финансовой поддержки участников отношений, в&nbsp;том числе в&nbsp;рамках исполнения государственного оборонного заказа (ГОЗ)',
-        },
-        {
-          title: 'Реализация',
-          desc: 'Создание закрытой экосистемы сервисов для заказчиков услуг посредством использования защищенной сети АСТ ГОЗ и&nbsp;инструментов специализированной организации.',
-        },
-      ] %}
-      {% for item in list %}
-        <li class="mission__item" data-order="{{ loop.index }}">
-          <h3 class="mission__item-title">{{ item.title }}</h3>
-          <p class="mission__item-desc">{{ item.desc }}</p>
-        </li>
-      {% endfor %}
-      </ul>
+      <div class="splide js-slider" data-name="mission">
+        <div class="splide__track">
+          <ul class="mission__list splide__list">
+          {% set list = [
+            {
+              title: 'Цель',
+              desc: 'Создание закрытой экосистемы (комплекса взаимоотношений между заказчиками и&nbsp;исполнителями в&nbsp;защищенной сети обмена информацией) поддержки предприятий ОПК.',
+            },
+            {
+              title: 'Задача',
+              desc: 'Формирование комплексного подхода к&nbsp;анализу, мониторингу и&nbsp;обеспечению информационной и&nbsp;финансовой поддержки участников отношений, в&nbsp;том числе в&nbsp;рамках исполнения государственного оборонного заказа (ГОЗ)',
+            },
+            {
+              title: 'Реализация',
+              desc: 'Создание закрытой экосистемы сервисов для заказчиков услуг посредством использования защищенной сети АСТ ГОЗ и&nbsp;инструментов специализированной организации.',
+            },
+          ] %}
+          {% for item in list %}
+            <li class="mission__item splide__slide" data-order="{{ loop.index }}">
+              <h3 class="mission__item-title">{{ item.title }}</h3>
+              <p class="mission__item-desc">{{ item.desc }}</p>
+            </li>
+          {% endfor %}
+          </ul>
+
+        </div>
+      </div>
     </div>
   </div>
 </section>
 
-<section class="fin-products">
+<section class="fin-products section">
   <div class="container">
     <h2 class="fin-products__title title">Финансовые продукты</h2>
     <ul class="fin-products__list">
