--- a/src/templates/purchase-service.twig
+++ b/src/templates/purchase-service.twig
@@ -1,4 +1,4 @@
-<section class="purchase-service">
+<section class="purchase-service section">
   <div class="container">
     <div class="purchase-service__title-wrap">
       <h2 class="purchase-service__title title">Услуги в&nbsp;сфере закупок</h2>
