--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -64,22 +64,25 @@ input {
   }
 }
 
+:root {
+  --container-padding: 2rem;
+  @include breakpoint($tablet-width) {
+    --container-padding: 2.4rem;
+  }
+  @include breakpoint($desktop-width) {
+    --container-padding: 10rem;
+  }
+  @include breakpoint($desktop-lg-width) {
+    --container-padding: 12rem;
+  }
+}
 
 .container {
   margin-left: auto;
   margin-right: auto;
-  padding: 0 2rem;
+  padding: 0 var(--container-padding, 2rem);
   max-width: 170rem;
   width: 100%;
-  @include breakpoint($tablet-width) {
-    padding: 0 2.4rem;
-  }
-  @include breakpoint($desktop-width) {
-    padding: 0 10rem;
-  }
-  @include breakpoint($desktop-lg-width) {
-    padding: 0 12rem;
-  }
 }
 
 .site-wrap {
