--- a/src/styles/blocks/_fin-products.scss
+++ b/src/styles/blocks/_fin-products.scss
@@ -1,21 +1,25 @@
 .fin-products {
-  position: relative;
-  margin-bottom: 12rem;
-  padding: 12rem 0;
+  padding-top: 4rem;
+  padding-bottom: 8rem;
   background-color:  #ECF2F8;
   overflow: hidden;
-  &::after {
-    content: '';
-    position: absolute;
-    top: 50%;
-    right: 0;
-    height: 66rem;
-    width: 75rem;
-    transform: translate(50%, -50%);
-    background-image: url("../assets/img/bg-logo.svg");
-    background-repeat: no-repeat;
-    background-position: contain;
-    pointer-events: none;
+  @include breakpoint($desktop-width) {
+    position: relative;
+    padding: 12rem 0;
+    &::after {
+      content: '';
+      position: absolute;
+      top: 50%;
+      right: 0;
+      height: 66rem;
+      width: 75rem;
+      transform: translate(50%, -50%);
+      background-image: url("../assets/img/bg-logo.svg");
+      background-repeat: no-repeat;
+      background-position: contain;
+      pointer-events: none;
+    }
+
   }
 
   > * {
@@ -24,20 +28,32 @@
   }
 
   &__title {
-    margin-bottom: 5rem;
+    margin-bottom: 3rem;
+    @include breakpoint($desktop-width) {
+      margin-bottom: 5rem;
+    }
   }
 
   &__list {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: -2rem;
-    margin-right: -2rem;
+    @include breakpoint($desktop-width) {
+      display: flex;
+      flex-wrap: wrap;
+      margin-top: -2rem;
+      margin-right: -2rem;
+    }
   }
 
   &__item {
-    width: calc(100% / 3 - 2rem);
-    margin-top: 2rem;
-    margin-right: 2rem;
+    margin-bottom: 2rem;
+    &:last-child {
+      margin-bottom: 0;
+    }
+    @include breakpoint($desktop-width) {
+      width: calc(100% / 3 - 2rem);
+      margin: 0;
+      margin-top: 2rem;
+      margin-right: 2rem;
+    }
   }
 
   &__item-link {
