--- a/src/templates/header.twig
+++ b/src/templates/header.twig
@@ -100,14 +100,18 @@
       </li>
     </ul>
   </nav>
-  <div class="test">
-    <a href="#" class="header__lk-link js-lk-btn" aria-describedby="tooltip">
-      <span class="header__lk-icon"><svg><use xlink:href="assets/sprite.svg#lock"></use></svg></span>
-      <span class="header__lk-text">Личный кабинет</span>
-    </a>
-    <div class="tooltip js-lk-tooltip" role="tooltip">
-      Личный кабинет скоро появится
-      <div class="tooltip__arrow" data-popper-arrow></div>
-    </div>
+
+  <a href="#" class="header__lk-link js-lk-btn" aria-describedby="tooltip">
+    <span class="header__lk-icon"><svg><use xlink:href="assets/sprite.svg#lock"></use></svg></span>
+    <span class="header__lk-text">Личный кабинет</span>
+  </a>
+  <div class="tooltip js-lk-tooltip" role="tooltip">
+    Личный кабинет скоро появится
+    <div class="tooltip__arrow" data-popper-arrow></div>
   </div>
+  <button class="header__menu-toggle js-menu-toggle" type="button">
+    <svg class="header__menu-open"><use xlink:href="assets/sprite.svg#menu-open"></use></svg>
+    <svg class="header__menu-close"><use xlink:href="assets/sprite.svg#close"></use></svg>
+  </button>
+
 </header>
