--- a/src/contacts.twig
+++ b/src/contacts.twig
@@ -7,7 +7,7 @@
 <section class="contacts">
   <div class="container">
   {% include 'templates/breadcrumbs.twig' %}
-    <h1 class="contcts__title">Контакты</h1>
+    <h1 class="contacts__title title">Контакты</h1>
     <p class="contacts__company-type">Общество с ограниченной ответственностью</p>
     <p class="contacts__company-name">&laquo;Единая снабжающая компания&raquo;</p>
     <ul class="contacts__list">
