--- a/src/fin-products-detail.twig
+++ b/src/fin-products-detail.twig
@@ -4,7 +4,7 @@
 <section class="fin-detail">
   {% include 'templates/detail-hero.twig' with {
     title: 'Банковские гарантии',
-    bgMobile: 'fin-products.jpg',
+    bgMobile: 'fin-products_mobile.jpg',
     bgDesktop: 'fin-products.jpg',
     orderBtn: true,
   } %}
