--- a/src/fin-products.twig
+++ b/src/fin-products.twig
@@ -2,7 +2,7 @@
 
 {% block page %}
 {% include 'templates/categories.twig' with {
-  mobileImg: 'fin-products.jpg',
+  mobileImg: 'fin-products_mobile.jpg',
   desktopImg: 'fin-products.jpg',
   title: 'Финансовые продукты',
   list: [
