--- a/src/gallery.twig
+++ b/src/gallery.twig
@@ -4,7 +4,7 @@
 <section class="gallery">
   {% include 'templates/detail-hero.twig' with {
     title: 'Фотографии',
-    bgMobile: 'gallery.jpg',
+    bgMobile: 'gallery_mobile.jpg',
     bgDesktop: 'gallery.jpg',
   } %}
 
