--- a/src/services-customer.twig
+++ b/src/services-customer.twig
@@ -2,7 +2,7 @@
 
 {% block page %}
 {% include 'templates/categories.twig' with {
-  mobileImg: 'services-customer.jpg',
+  mobileImg: 'services-customer_mobile.jpg',
   desktopImg: 'services-customer.jpg',
   title: 'Услуги заказчику',
   list: [
