--- a/src/services-participant.twig
+++ b/src/services-participant.twig
@@ -2,7 +2,7 @@
 
 {% block page %}
 {% include 'templates/categories.twig' with {
-  mobileImg: 'services-participant.jpg',
+  mobileImg: 'services-participant_mobile.jpg',
   desktopImg: 'services-participant.jpg',
   title: 'Услуги участнику',
   list: [
