--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -88,7 +88,7 @@ input {
 .site-wrap {
   display: flex;
   flex-direction: column;
-  min-height: calc(var(--vh, 1vh) * 100);
+  min-height: 100vh;
 }
 
 
