--- a/src/styles/blocks/_fin-detail.scss
+++ b/src/styles/blocks/_fin-detail.scss
@@ -1,28 +1,41 @@
 .fin-detail {
-  margin-bottom: 12rem;
+  margin-bottom: 8rem;
+  @include breakpoint($desktop-width) {
+    margin-bottom: 12rem;
+  }
 
   &__list {
     position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: -2rem;
-    margin-right: -2rem;
-    margin-bottom: 12rem;
+    margin-bottom: 6rem;
+    @include breakpoint($desktop-width) {
+      display: flex;
+      flex-wrap: wrap;
+      margin-top: -2rem;
+      margin-right: -2rem;
+      margin-bottom: 12rem;
+    }
   }
 
   &__item {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: calc(100% / 3 - 2rem);
     min-height: 24rem;
-    margin-top: 2rem;
-    margin-right: 2rem;
+    margin-bottom: 2rem;
     padding: 4rem;
     padding-left: 3.2rem;
     border-radius: .4rem;
     background: #ECF2F8;
     border-left: .8rem solid $color-main;
+    &:last-child {
+      margin-bottom: 0;
+    }
+    @include breakpoint($desktop-width) {
+      width: calc(100% / 3 - 2rem);
+      margin: 0;
+      margin-top: 2rem;
+      margin-right: 2rem;
+    }
   }
 
   &__item-title {
