--- a/src/privacy-policy.twig
+++ b/src/privacy-policy.twig
@@ -46,7 +46,7 @@
       <p>Для защиты прав и законных интересов Администрации в связи с допущенными Пользователем нарушениями.</p>
       <p>5. Изменение Политики конфиденциальности</p>
       <p>5.1. Настоящая Политика может быть изменена или прекращена Администрацией в одностороннем порядке без предварительного уведомления Пользователя. Новая редакция Политики вступает в силу с момента ее размещения на Сайте, если иное не предусмотрено новой редакцией Политики.</p>
-      <p>5.2. Действующая редакция Политики находится на Сайте в сети Интернет по адресу./usloviya_ispolzovaniya_servisa/obrazec-politiki-konfidencialnosti-2017</p>
+      {# <p>5.2. Действующая редакция Политики находится на Сайте в сети Интернет по адресу ./usloviya_ispolzovaniya_servisa/obrazec-politiki-konfidencialnosti-2017</p> #}
       <p>Действующая редакция Политики от __________ 20__ г.</p>
     </div>
   </div>
