--- a/src/styles/_body-mods.scss
+++ b/src/styles/_body-mods.scss
@@ -72,7 +72,7 @@
         stroke: #313131;
       }
 
-      &__nested-list{
+      &__nested-list {
         left: 2rem;
         width: 100%;
         border-radius: 0;
@@ -129,6 +129,10 @@
       border-radius: 0;
       padding-top: 0;
       padding-bottom: 0;
+      @include breakpoint($desktop-width) {
+        padding-top: 3.6rem;
+        padding-bottom: 3.6rem;
+      }
     }
 
     &__double {
@@ -138,6 +142,10 @@
       border-radius: 0;
       padding-top: 0;
       padding-bottom: 0;
+      @include breakpoint($desktop-width) {
+        padding-top: 3.6rem;
+        padding-bottom: 3.6rem;
+      }
     }
 
     &__double-section {
