--- a/src/styles/blocks/_album.scss
+++ b/src/styles/blocks/_album.scss
@@ -3,40 +3,55 @@
 
   &__list {
     position: relative;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 2rem;
+    @include breakpoint($desktop-width) {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      grid-gap: 2rem;
+    }
   }
 
   &__item {
-    position: relative;
-    border-radius: .8rem;
+    margin-bottom: 1.8rem;
     overflow: hidden;
-
-    &.col-1 {
-      grid-column: span 1;
-      padding-top: 100%;
+    border-radius: .8rem;
+    &:last-child {
+      margin-bottom: 0;
     }
+    @include breakpoint($desktop-width) {
+      position: relative;
+      margin: 0;
 
-    &.col-2 {
-      grid-column: span 2;
-      padding-top: calc(50% - 1rem);
-    }
+      &.col-1 {
+        grid-column: span 1;
+        padding-top: 100%;
+      }
 
-    &.col-3 {
-      grid-column: span 3;
-      padding-top: calc(100% / 3 - 2rem);
+      &.col-2 {
+        grid-column: span 2;
+        padding-top: calc(50% - 1rem);
+      }
+
+      &.col-3 {
+        grid-column: span 3;
+        padding-top: calc(100% / 3 - 2rem);
+      }
+
     }
   }
 
   &__item-link {
-    @include stretchAbsolute();
+    @include breakpoint($desktop-width) {
+      @include stretchAbsolute();
+    }
   }
 
   &__item-img {
+    display: block;
     width: 100%;
-    height: 100%;
-    object-fit: cover;
+    @include breakpoint($desktop-width) {
+      height: 100%;
+      object-fit: cover;
+    }
   }
 
   .detail-hero {
@@ -45,7 +60,11 @@
       font-size: 2.4rem;
       line-height: 2.8rem;
       font-weight: 500;
+      text-align: center;
       letter-spacing: 0.03em;
+      @include breakpoint($desktop-width) {
+        text-align: left;
+      }
     }
   }
 }
