--- a/src/styles/blocks/_breadcrumbs.scss
+++ b/src/styles/blocks/_breadcrumbs.scss
@@ -14,7 +14,6 @@
         color: rgba(255, 255, 255, 0.5);
       }
     }
-
   }
 
   &__arrow {
@@ -44,13 +43,16 @@
 
   &__link {
     letter-spacing: 0.03em;
-    color: rgba(255, 255, 255, 0.5);
+    color: rgba(255, 255, 255, 0.8);
     font-size: 1.4rem;
     line-height: 1.3;
     text-decoration: none;
     transition: .3s;
     @include hover() {
       color: #fff;
+    }
+    @include breakpoint($desktop-width) {
+      color: rgba(255, 255, 255, 0.5);
     }
   }
 }
