--- a/src/styles/blocks/_categories.scss
+++ b/src/styles/blocks/_categories.scss
@@ -4,8 +4,9 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    min-height: calc(100 * var(--vh, 1vh));
-    padding-bottom: 22rem;
+    min-height: calc(100 * var(--static-vh, 1vh));
+    padding-bottom: 15rem;
+    margin-bottom: -15rem;
     padding-top: calc(var(--header-height) + 2rem);
     background-repeat: no-repeat;
     background-size: cover;
@@ -13,6 +14,10 @@
     background-image: var(--category-img-mobile);
     @include breakpoint($tablet-width) {
       background-image: var(--category-img-desktop);
+    }
+    @include breakpoint($desktop-width) {
+      padding-bottom: 22rem;
+      margin-bottom: -22rem;
     }
 
     &::after {
@@ -29,48 +34,68 @@
 
   &__title {
     margin: 0;
-    font-size: 6rem;
-    line-height: 7rem;
+    font-size: 3.2rem;
+    line-height: 3.8rem;
     letter-spacing: 0.05em;
     color: #FFFFFF;
-    font-weight: 500;
-  }
-
-  &__list-wrap {
-    position: relative;
-    top: -23rem;
-    margin-bottom: -11rem;
+    font-weight: 600;
+    text-align: center;
+    @include breakpoint($desktop-width) {
+      text-align: left;
+      font-size: 6rem;
+      line-height: 7rem;
+      letter-spacing: 0.05em;
+      color: #FFFFFF;
+      font-weight: 500;
+    }
   }
 
   &__list {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: -2rem;
-    margin-right: -2rem;
+    position: relative;
+    @include breakpoint($desktop-width) {
+      display: flex;
+      flex-wrap: wrap;
+      margin-right: -2rem;
+    }
   }
 
   &__item {
-    display: flex;
-    width: calc(50% - 2rem);
-    margin-top: 2rem;
-    margin-right: 2rem;
+    margin-bottom: 2rem;
+    &:last-child {
+      margin-bottom: 0;
+    }
+    @include breakpoint($desktop-width) {
+      display: flex;
+      width: calc(50% - 2rem);
+      margin: 0;
+      margin-top: 2rem;
+      margin-right: 2rem;
+    }
   }
 
   &__item-link {
     display: flex;
     flex-direction: column;
     width: 100%;
-    min-height: 27.6rem;
-    padding: 4rem;
-    padding-top: 5rem;
+    min-height: 22rem;
+    padding: 3rem;
     text-decoration: none;
     color: #000;
     background: #EFF4F9;
     border-radius: 4px;
     transition: all .3s;
+
     @include hover() {
       box-shadow: 0px 0 25px 0 rgba(0, 0, 0, .1);
     }
+
+    @include breakpoint($desktop-width) {
+      min-height: 27.6rem;
+      padding: 4rem;
+      padding-top: 5rem;
+    }
+
+
   }
 
   &__item-title,
@@ -95,4 +120,12 @@
     fill: $color-main;
   }
 
+  .breadcrumbs {
+    width: fit-content;
+    margin: 0 auto;
+    @include breakpoint($desktop-width) {
+      margin: 0;
+      width: auto;
+    }
+  }
 }
