--- a/src/styles/blocks/_detail-hero.scss
+++ b/src/styles/blocks/_detail-hero.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  min-height: 46rem;
+  min-height: calc(100 * var(--static-vh, 1vh));
   margin-bottom: -12rem;
   padding-bottom: calc(12rem + 2rem);
   padding-top: calc(var(--header-height) + 2rem);
@@ -17,7 +17,9 @@
   }
 
   &._hight {
-    min-height: 71rem;
+    @include breakpoint($desktop-width) {
+      min-height: 71rem;
+    }
   }
 
   &::after {
@@ -33,10 +35,17 @@
 
   &__title {
     margin: 0;
-    font-weight: 500;
-    font-size: 6rem;
-    line-height: 7rem;
+    font-weight: 600;
+    font-size: 3.2rem;
+    line-height: 3.8rem;
     letter-spacing: 0.05em;
+    text-align: center;
+    @include breakpoint($desktop-width) {
+      text-align: left;
+      font-size: 6rem;
+      line-height: 7rem;
+      font-weight: 500;
+    }
   }
 
   &__text {
@@ -47,9 +56,25 @@
   }
 
   &__order-btn {
-    margin-top: 3.6rem;
+    display: block;
     width: 26rem;
+    margin-top: 3.6rem;
+    margin-left: auto;
+    margin-right: auto;
     padding-left: 2rem;
     padding-right: 2rem;
+    @include breakpoint($desktop-width) {
+      margin-left: 0;
+      margin-right: 0;
+    }
+  }
+
+  .breadcrumbs {
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+    @include breakpoint($desktop-width) {
+      width: 100%;
+    }
   }
 }
