--- a/src/styles/blocks/_docs.scss
+++ b/src/styles/blocks/_docs.scss
@@ -3,13 +3,15 @@
   padding-top: calc(var(--header-height, 9rem) + 3.5rem);
 
   &__title {
-    margin: 0;
-    margin-bottom: 4.6rem;
-    font-weight: 500;
-    font-size: 6rem;
-    line-height: 7rem;
-    letter-spacing: 0.05em;
+    margin-bottom: 3rem;
     color: #313131;
+    @include breakpoint($desktop-width) {
+      margin-bottom: 4.6rem;
+      font-weight: 500;
+      font-size: 6rem;
+      line-height: 7rem;
+      letter-spacing: 0.05em;
+    }
   }
 
   &__list {
@@ -21,9 +23,12 @@
 
   &__item {
     display: flex;
-    width: calc(25% - 2rem);
+    width: calc(50% - 2rem);
     margin-top: 2rem;
     margin-right: 2rem;
+    @include breakpoint($desktop-width) {
+      width: calc(25% - 2rem);
+    }
   }
 
   &__item-link {
@@ -31,10 +36,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: 24rem;
+    min-height: 18.7rem;
     width: 100%;
-    padding: 3rem;
-    padding-top: 4rem;
+    padding: 2.5rem 1.6rem;
     text-decoration: none;
     color: #000;
     background: #ECF2F8;
@@ -52,6 +56,12 @@
           color: #12528D;
         }
       }
+    }
+
+    @include breakpoint($desktop-width) {
+      min-height: 24rem;
+      padding: 3rem;
+      padding-top: 4rem;
     }
 
     > * {
@@ -77,16 +87,23 @@
   &__format-icon {
     width: 7.3rem;
     height: 7.3rem;
-    margin-bottom: 1rem;
+    margin-bottom: 1.8rem;
+    @include breakpoint($desktop-width) {
+      margin-bottom: 1rem;
+    }
   }
 
   &__item-name {
     margin: 0;
     margin-top: auto;
     font-weight: 500;
-    font-size: 2rem;
-    line-height: 2.3rem;
+    font-size: 1.6rem;
+    line-height: 2.2rem;
     letter-spacing: 0.03em;
     transition: color .3s;
+    @include breakpoint($desktop-width) {
+      font-size: 2rem;
+      line-height: 2.3rem;
+    }
   }
 }
