--- a/src/styles/blocks/_feedback.scss
+++ b/src/styles/blocks/_feedback.scss
@@ -1,13 +1,15 @@
 .feedback {
-  margin-bottom: 12rem;
+  margin-bottom: 8rem;
+  @include breakpoint($desktop-width) {
+    margin-bottom: 12rem;
+  }
 
   &__title {
     margin: 0;
     margin-bottom: 3rem;
     font-weight: 600;
-    font-size: 2.4rem;
+    font-size: 3.2rem;
     @include breakpoint($desktop-width) {
-      font-size: 3.2rem;
       line-height: 3.8rem;
       letter-spacing: 0.05em;
     }
