--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -19,15 +19,26 @@
 
     &:nth-child(2) {
       padding-top: 6rem;
+      @include breakpoint($desktop-width) {
+        padding-top: 0;
+      }
     }
 
     &:last-child {
       padding-bottom: 6rem;
+      @include breakpoint($desktop-width) {
+        padding-bottom: 0;
+      }
     }
 
     &._logo {
       padding: 6rem 0;
       border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+      @include breakpoint($desktop-width) {
+        border-bottom: none;
+        padding-top: 0;
+        padding-bottom: 0;
+      }
     }
     @include breakpoint($desktop-width) {
       flex-grow: 1;
