--- a/src/styles/blocks/_gallery.scss
+++ b/src/styles/blocks/_gallery.scss
@@ -9,9 +9,12 @@
 
   &__item {
     display: flex;
-    width: calc(50% - 2rem);
+    width: calc(100% - 2rem);
     margin-top: 2rem;
     margin-right: 2rem;
+    @include breakpoint($desktop-width) {
+      width: calc(50% - 2rem);
+    }
   }
 
   &__item-link {
@@ -19,12 +22,15 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    min-height: 38rem;
+    min-height: 26.7rem;
     padding: 3rem;
     text-decoration: none;
     color: #fff;
     border-radius: .8rem;
     overflow: hidden;
+    @include breakpoint($desktop-width) {
+      min-height: 38rem;
+    }
     &::after {
       content: '';
       @include stretchAbsolute();
@@ -40,9 +46,16 @@
   &__item-title {
     margin: 0;
     margin-bottom: 1rem;
-    font-size: 3.2rem;
-    line-height: 3.8rem;
-    letter-spacing: 0.05em;
+    font-size: 2.4rem;
+    line-height: 2.8rem;
+    font-weight: 500;
+    letter-spacing: 0.03em;
+    @include breakpoint($desktop-width) {
+      font-weight: 600;
+      font-size: 3.2rem;
+      line-height: 3.8rem;
+      letter-spacing: 0.05em;
+    }
   }
 
   &__item-date {
