--- a/src/styles/blocks/_privacy-policy.scss
+++ b/src/styles/blocks/_privacy-policy.scss
@@ -3,13 +3,18 @@
   margin-bottom: 6.2rem;
   &__title {
     margin: 0;
-    margin-bottom: 5rem;
+    margin-bottom: 3rem;
     text-align: center;
-    font-size: 6rem;
-    line-height: 7rem;
+    font-size: 2.8rem;
+    line-height: 1.2;
     color: #313131;
     font-weight: 500;
     letter-spacing: 0.05em;
+    @include breakpoint($desktop-width) {
+      margin-bottom: 5rem;
+      font-size: 6rem;
+      line-height: 7rem;
+    }
   }
 
   .breadcrumbs {
