--- a/src/templates/base.twig
+++ b/src/templates/base.twig
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="ru">
+{% set version = 4 %}
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +12,7 @@
     <link rel="preload" href="./assets/fonts/Raleway/Raleway-Regular.woff2" as="font" crossorigin="anonymous" />
     <link rel="preload" href="./assets/fonts/Raleway/Raleway-Medium.woff2" as="font" crossorigin="anonymous" />
 
-    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/main.css?{{ version }}">
 
     {% if map %}
       <script src="https://api-maps.yandex.ru/2.1/?c14d3178-13f2-4774-9ead-d5ee054cf716&lang=ru_RU&" type="text/javascript"></script>
@@ -27,7 +28,7 @@
   {% include 'footer.twig' %}
 </div>
 
-<script src="./js/main.js"></script>
+<script src="./js/main.js?{{ version }}"></script>
 </body>
 </html>
 
